fix: score centered alignment and add icon

--- a/appDesign.css
+++ b/appDesign.css
@@ -202,8 +202,8 @@ footer {
   font-size: 45px;
   color: #005691;
   font-weight: bold;
-  margin-left: 80px;
   margin-top: 50px;
+  text-align: center;
 }
 
 .nav {
